// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/Header Default smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <div class="card-header">
            <div class="share-icons">
              <button aria-label="copy link to lookup"
                      class="copy-button"
                      data-testid="copy-button"
              >
                <span class="fa-layers fa-fw">
                  <svg aria-hidden="true"
                       focusable="false"
                       data-prefix="fas"
                       data-icon="circle"
                       class="svg-inline--fa fa-circle circle "
                       role="img"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 512 512"
                       style="transform-origin: 0.5em 0.5em;"
                  >
                    <g transform="translate(256 256)">
                      <g transform="translate(0, 0)  scale(1.3125, 1.3125)  rotate(0 0 0)">
                        <path fill="currentColor"
                              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
                              transform="translate(-256 -256)"
                        >
                        </path>
                      </g>
                    </g>
                  </svg>
                  <svg aria-hidden="true"
                       focusable="false"
                       data-prefix="fas"
                       data-icon="copy"
                       class="svg-inline--fa fa-copy copy "
                       role="img"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 448 512"
                       style="transform-origin: 0.4375em 0.5em;"
                  >
                    <g transform="translate(224 256)">
                      <g transform="translate(0, 0)  scale(0.75, 0.75)  rotate(0 0 0)">
                        <path fill="currentColor"
                              d="M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z"
                              transform="translate(-224 -256)"
                        >
                        </path>
                      </g>
                    </g>
                  </svg>
                </span>
              </button>
              <button aria-label="share lookup to Twitter"
                      data-testid="twitter-share-button"
                      class="react-share__ShareButton twitter-share-button"
              >
                <svg viewbox="0 0 64 64"
                     width="32"
                     height="32"
                     crossorigin
                >
                  <circle cx="32"
                          cy="32"
                          r="32"
                          fill="#00aced"
                  >
                  </circle>
                  <path d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                        fill="white"
                  >
                  </path>
                </svg>
              </button>
              <button aria-label="share lookup to Bluesky"
                      data-testid="bluesky-share-button"
                      class="react-share__ShareButton bluesky-share-button"
              >
                <svg viewbox="0 0 64 64"
                     width="32"
                     height="32"
                     crossorigin
                >
                  <circle cx="32"
                          cy="32"
                          r="32"
                          fill="#1185FE"
                  >
                  </circle>
                  <path d="M21.945 18.886C26.015 21.941 30.393 28.137 32 31.461 33.607 28.137 37.985 21.941 42.055 18.886 44.992 16.681 49.75 14.975 49.75 20.403 49.75 21.487 49.128 29.51 48.764 30.813 47.497 35.341 42.879 36.496 38.772 35.797 45.951 37.019 47.778 41.067 43.833 45.114 36.342 52.801 33.066 43.186 32.227 40.722 32.073 40.27 32.001 40.059 32 40.238 31.999 40.059 31.927 40.27 31.773 40.722 30.934 43.186 27.658 52.801 20.167 45.114 16.222 41.067 18.049 37.019 25.228 35.797 21.121 36.496 16.503 35.341 15.236 30.813 14.872 29.51 14.25 21.487 14.25 20.403 14.25 14.975 19.008 16.681 21.945 18.886Z"
                        fill="white"
                  >
                  </path>
                </svg>
              </button>
            </div>
            <button aria-label="remove lookup"
                    class="remove-lookup-button"
                    data-testid="remove-lookup-button"
                    type="button"
            >
              <svg aria-hidden="true"
                   focusable="false"
                   data-prefix="fas"
                   data-icon="circle-xmark"
                   class="svg-inline--fa fa-circle-xmark circle"
                   role="img"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 512 512"
                   style="transform-origin: 0.5em 0.5em;"
              >
                <g transform="translate(256 256)">
                  <g transform="translate(0, 0)  scale(1.375, 1.375)  rotate(0 0 0)">
                    <path fill="currentColor"
                          d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                          transform="translate(-256 -256)"
                    >
                    </path>
                  </g>
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/Header WithPreviousLookupSubheader smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <div class="card-header">
            <div class="share-icons">
              <button aria-label="copy link to lookup"
                      class="copy-button"
                      data-testid="copy-button"
              >
                <span class="fa-layers fa-fw">
                  <svg aria-hidden="true"
                       focusable="false"
                       data-prefix="fas"
                       data-icon="circle"
                       class="svg-inline--fa fa-circle circle "
                       role="img"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 512 512"
                       style="transform-origin: 0.5em 0.5em;"
                  >
                    <g transform="translate(256 256)">
                      <g transform="translate(0, 0)  scale(1.3125, 1.3125)  rotate(0 0 0)">
                        <path fill="currentColor"
                              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
                              transform="translate(-256 -256)"
                        >
                        </path>
                      </g>
                    </g>
                  </svg>
                  <svg aria-hidden="true"
                       focusable="false"
                       data-prefix="fas"
                       data-icon="copy"
                       class="svg-inline--fa fa-copy copy "
                       role="img"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 448 512"
                       style="transform-origin: 0.4375em 0.5em;"
                  >
                    <g transform="translate(224 256)">
                      <g transform="translate(0, 0)  scale(0.75, 0.75)  rotate(0 0 0)">
                        <path fill="currentColor"
                              d="M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z"
                              transform="translate(-224 -256)"
                        >
                        </path>
                      </g>
                    </g>
                  </svg>
                </span>
              </button>
              <button aria-label="share lookup to Twitter"
                      data-testid="twitter-share-button"
                      class="react-share__ShareButton twitter-share-button"
              >
                <svg viewbox="0 0 64 64"
                     width="32"
                     height="32"
                     crossorigin
                >
                  <circle cx="32"
                          cy="32"
                          r="32"
                          fill="#00aced"
                  >
                  </circle>
                  <path d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                        fill="white"
                  >
                  </path>
                </svg>
              </button>
              <button aria-label="share lookup to Bluesky"
                      data-testid="bluesky-share-button"
                      class="react-share__ShareButton bluesky-share-button"
              >
                <svg viewbox="0 0 64 64"
                     width="32"
                     height="32"
                     crossorigin
                >
                  <circle cx="32"
                          cy="32"
                          r="32"
                          fill="#1185FE"
                  >
                  </circle>
                  <path d="M21.945 18.886C26.015 21.941 30.393 28.137 32 31.461 33.607 28.137 37.985 21.941 42.055 18.886 44.992 16.681 49.75 14.975 49.75 20.403 49.75 21.487 49.128 29.51 48.764 30.813 47.497 35.341 42.879 36.496 38.772 35.797 45.951 37.019 47.778 41.067 43.833 45.114 36.342 52.801 33.066 43.186 32.227 40.722 32.073 40.27 32.001 40.059 32 40.238 31.999 40.059 31.927 40.27 31.773 40.722 30.934 43.186 27.658 52.801 20.167 45.114 16.222 41.067 18.049 37.019 25.228 35.797 21.121 36.496 16.503 35.341 15.236 30.813 14.872 29.51 14.25 21.487 14.25 20.403 14.25 14.975 19.008 16.681 21.945 18.886Z"
                        fill="white"
                  >
                  </path>
                </svg>
              </button>
            </div>
          </div>
          <div class="card-subheader">
            <ul class="list-group list-group-flush card-subheader from-previous-lookup">
              <li class="list-group-item">
                <div>
                  Shared via link
                </div>
                <button aria-label="remove lookup"
                        class="remove-lookup-button"
                        data-testid="remove-lookup-button"
                        type="button"
                >
                  <svg aria-hidden="true"
                       focusable="false"
                       data-prefix="fas"
                       data-icon="circle-xmark"
                       class="svg-inline--fa fa-circle-xmark circle"
                       role="img"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 512 512"
                       style="transform-origin: 0.5em 0.5em;"
                  >
                    <g transform="translate(256 256)">
                      <g transform="translate(0, 0)  scale(1.375, 1.375)  rotate(0 0 0)">
                        <path fill="currentColor"
                              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                              transform="translate(-256 -256)"
                        >
                        </path>
                      </g>
                    </g>
                  </svg>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
